chain-query-language/chainsql/chainsqlParser.cpp

// Generated from E:\projects\chain-query-language\chain-query-language\chainsql.g4 by ANTLR 4.7


#include "chainsql/chainsqlListener.h"

#include "chainsql/chainsqlParser.h"


using namespace antlrcpp;
using namespace chainsql;
using namespace antlr4;

chainsqlParser::chainsqlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

chainsqlParser::~chainsqlParser() {
  delete _interpreter;
}

std::string chainsqlParser::getGrammarFileName() const {
  return "chainsql.g4";
}

const std::vector<std::string>& chainsqlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& chainsqlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ParseContext ------------------------------------------------------------------

chainsqlParser::ParseContext::ParseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* chainsqlParser::ParseContext::EOF() {
  return getToken(chainsqlParser::EOF, 0);
}

std::vector<chainsqlParser::Sql_stmt_listContext *> chainsqlParser::ParseContext::sql_stmt_list() {
  return getRuleContexts<chainsqlParser::Sql_stmt_listContext>();
}

chainsqlParser::Sql_stmt_listContext* chainsqlParser::ParseContext::sql_stmt_list(size_t i) {
  return getRuleContext<chainsqlParser::Sql_stmt_listContext>(i);
}

std::vector<chainsqlParser::ErrorContext *> chainsqlParser::ParseContext::error() {
  return getRuleContexts<chainsqlParser::ErrorContext>();
}

chainsqlParser::ErrorContext* chainsqlParser::ParseContext::error(size_t i) {
  return getRuleContext<chainsqlParser::ErrorContext>(i);
}


size_t chainsqlParser::ParseContext::getRuleIndex() const {
  return chainsqlParser::RuleParse;
}

void chainsqlParser::ParseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<chainsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParse(this);
}

void chainsqlParser::ParseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<chainsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParse(this);
}

chainsqlParser::ParseContext* chainsqlParser::parse() {
  ParseContext *_localctx = _tracker.createInstance<ParseContext>(_ctx, getState());
  enterRule(_localctx, 0, chainsqlParser::RuleParse);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << chainsqlParser::SCOL)
      | (1ULL << chainsqlParser::K_CREATE)
      | (1ULL << chainsqlParser::K_DELETE))) != 0) || ((((_la - 88) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 88)) & ((1ULL << (chainsqlParser::K_INSERT - 88))
      | (1ULL << (chainsqlParser::K_SELECT - 88))
      | (1ULL << (chainsqlParser::K_SHOW - 88))
      | (1ULL << (chainsqlParser::K_UPDATE - 88)))) != 0) || _la == chainsqlParser::UNEXPECTED_CHAR) {
      setState(94);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case chainsqlParser::SCOL:
        case chainsqlParser::K_CREATE:
        case chainsqlParser::K_DELETE:
        case chainsqlParser::K_INSERT:
        case chainsqlParser::K_SELECT:
        case chainsqlParser::K_SHOW:
        case chainsqlParser::K_UPDATE: {
          setState(92);
          sql_stmt_list();
          break;
        }

        case chainsqlParser::UNEXPECTED_CHAR: {
          setState(93);
          error();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(98);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(99);
    match(chainsqlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ErrorContext ------------------------------------------------------------------

chainsqlParser::ErrorContext::ErrorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* chainsqlParser::ErrorContext::UNEXPECTED_CHAR() {
  return getToken(chainsqlParser::UNEXPECTED_CHAR, 0);
}


size_t chainsqlParser::ErrorContext::getRuleIndex() const {
  return chainsqlParser::RuleError;
}

void chainsqlParser::ErrorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<chainsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterError(this);
}

void chainsqlParser::ErrorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<chainsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitError(this);
}

chainsqlParser::ErrorContext* chainsqlParser::error() {
  ErrorContext *_localctx = _tracker.createInstance<ErrorContext>(_ctx, getState());
  enterRule(_localctx, 2, chainsqlParser::RuleError);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    dynamic_cast<ErrorContext *>(_localctx)->unexpected_charToken = match(chainsqlParser::UNEXPECTED_CHAR);
     
         throw new RuntimeException("UNEXPECTED_CHAR=" + (dynamic_cast<ErrorContext *>(_localctx)->unexpected_charToken != nullptr ? dynamic_cast<ErrorContext *>(_localctx)->unexpected_charToken->getText() : "")); 
       
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sql_stmt_listContext ------------------------------------------------------------------

chainsqlParser::Sql_stmt_listContext::Sql_stmt_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<chainsqlParser::Sql_stmtContext *> chainsqlParser::Sql_stmt_listContext::sql_stmt() {
  return getRuleContexts<chainsqlParser::Sql_stmtContext>();
}

chainsqlParser::Sql_stmtContext* chainsqlParser::Sql_stmt_listContext::sql_stmt(size_t i) {
  return getRuleContext<chainsqlParser::Sql_stmtContext>(i);
}


size_t chainsqlParser::Sql_stmt_listContext::getRuleIndex() const {
  return chainsqlParser::RuleSql_stmt_list;
}

void chainsqlParser::Sql_stmt_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<chainsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSql_stmt_list(this);
}

void chainsqlParser::Sql_stmt_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<chainsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSql_stmt_list(this);
}

chainsqlParser::Sql_stmt_listContext* chainsqlParser::sql_stmt_list() {
  Sql_stmt_listContext *_localctx = _tracker.createInstance<Sql_stmt_listContext>(_ctx, getState());
  enterRule(_localctx, 4, chainsqlParser::RuleSql_stmt_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(107);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == chainsqlParser::SCOL) {
      setState(104);
      match(chainsqlParser::SCOL);
      setState(109);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(110);
    sql_stmt();
    setState(119);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(112); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(111);
          match(chainsqlParser::SCOL);
          setState(114); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == chainsqlParser::SCOL);
        setState(116);
        sql_stmt(); 
      }
      setState(121);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
    setState(125);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(122);
        match(chainsqlParser::SCOL); 
      }
      setState(127);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sql_stmtContext ------------------------------------------------------------------

chainsqlParser::Sql_stmtContext::Sql_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

chainsqlParser::Create_index_stmtContext* chainsqlParser::Sql_stmtContext::create_index_stmt() {
  return getRuleContext<chainsqlParser::Create_index_stmtContext>(0);
}

chainsqlParser::Create_table_stmtContext* chainsqlParser::Sql_stmtContext::create_table_stmt() {
  return getRuleContext<chainsqlParser::Create_table_stmtContext>(0);
}

chainsqlParser::Delete_stmt_limitedContext* chainsqlParser::Sql_stmtContext::delete_stmt_limited() {
  return getRuleContext<chainsqlParser::Delete_stmt_limitedContext>(0);
}

chainsqlParser::Insert_stmtContext* chainsqlParser::Sql_stmtContext::insert_stmt() {
  return getRuleContext<chainsqlParser::Insert_stmtContext>(0);
}

chainsqlParser::Select_stmtContext* chainsqlParser::Sql_stmtContext::select_stmt() {
  return getRuleContext<chainsqlParser::Select_stmtContext>(0);
}

chainsqlParser::Update_stmt_limitedContext* chainsqlParser::Sql_stmtContext::update_stmt_limited() {
  return getRuleContext<chainsqlParser::Update_stmt_limitedContext>(0);
}

chainsqlParser::Show_tables_stmtContext* chainsqlParser::Sql_stmtContext::show_tables_stmt() {
  return getRuleContext<chainsqlParser::Show_tables_stmtContext>(0);
}


size_t chainsqlParser::Sql_stmtContext::getRuleIndex() const {
  return chainsqlParser::RuleSql_stmt;
}

void chainsqlParser::Sql_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<chainsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSql_stmt(this);
}

void chainsqlParser::Sql_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<chainsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSql_stmt(this);
}

chainsqlParser::Sql_stmtContext* chainsqlParser::sql_stmt() {
  Sql_stmtContext *_localctx = _tracker.createInstance<Sql_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, chainsqlParser::RuleSql_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(128);
      create_index_stmt();
      break;
    }

    case 2: {
      setState(129);
      create_table_stmt();
      break;
    }

    case 3: {
      setState(130);
      delete_stmt_limited();
      break;
    }

    case 4: {
      setState(131);
      insert_stmt();
      break;
    }

    case 5: {
      setState(132);
      select_stmt();
      break;
    }

    case 6: {
      setState(133);
      update_stmt_limited();
      break;
    }

    case 7: {
      setState(134);
      show_tables_stmt();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Create_index_stmtContext ------------------------------------------------------------------

chainsqlParser::Create_index_stmtContext::Create_index_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* chainsqlParser::Create_index_stmtContext::K_CREATE() {
  return getToken(chainsqlParser::K_CREATE, 0);
}

tree::TerminalNode* chainsqlParser::Create_index_stmtContext::K_INDEX() {
  return getToken(chainsqlParser::K_INDEX, 0);
}

chainsqlParser::Index_nameContext* chainsqlParser::Create_index_stmtContext::index_name() {
  return getRuleContext<chainsqlParser::Index_nameContext>(0);
}

tree::TerminalNode* chainsqlParser::Create_index_stmtContext::K_ON() {
  return getToken(chainsqlParser::K_ON, 0);
}

chainsqlParser::Table_nameContext* chainsqlParser::Create_index_stmtContext::table_name() {
  return getRuleContext<chainsqlParser::Table_nameContext>(0);
}

std::vector<chainsqlParser::Indexed_columnContext *> chainsqlParser::Create_index_stmtContext::indexed_column() {
  return getRuleContexts<chainsqlParser::Indexed_columnContext>();
}

chainsqlParser::Indexed_columnContext* chainsqlParser::Create_index_stmtContext::indexed_column(size_t i) {
  return getRuleContext<chainsqlParser::Indexed_columnContext>(i);
}

tree::TerminalNode* chainsqlParser::Create_index_stmtContext::K_UNIQUE() {
  return getToken(chainsqlParser::K_UNIQUE, 0);
}


size_t chainsqlParser::Create_index_stmtContext::getRuleIndex() const {
  return chainsqlParser::RuleCreate_index_stmt;
}

void chainsqlParser::Create_index_stmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<chainsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreate_index_stmt(this);
}

void chainsqlParser::Create_index_stmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<chainsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreate_index_stmt(this);
}

chainsqlParser::Create_index_stmtContext* chainsqlParser::create_index_stmt() {
  Create_index_stmtContext *_localctx = _tracker.createInstance<Create_index_stmtContext>(_ctx, getState());
  enterRule(_localctx, 8, chainsqlParser::RuleCreate_index_stmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137);
    match(chainsqlParser::K_CREATE);
    setState(139);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == chainsqlParser::K_UNIQUE) {
      setState(138);
      match(chainsqlParser::K_UNIQUE);
    }
    setState(141);
    match(chainsqlParser::K_INDEX);
    setState(142);
    index_name();
    setState(143);
    match(chainsqlParser::K_ON);
    setState(144);
    table_name();
    setState(145);
    match(chainsqlParser::OPEN_PAR);
    setState(146);
    indexed_column();
    setState(151);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == chainsqlParser::COMMA) {
      setState(147);
      match(chainsqlParser::COMMA);
      setState(148);
      indexed_column();
      setState(153);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(154);
    match(chainsqlParser::CLOSE_PAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Create_table_stmtContext ------------------------------------------------------------------

chainsqlParser::Create_table_stmtContext::Create_table_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* chainsqlParser::Create_table_stmtContext::K_CREATE() {
  return getToken(chainsqlParser::K_CREATE, 0);
}

tree::TerminalNode* chainsqlParser::Create_table_stmtContext::K_TABLE() {
  return getToken(chainsqlParser::K_TABLE, 0);
}

chainsqlParser::Table_nameContext* chainsqlParser::Create_table_stmtContext::table_name() {
  return getRuleContext<chainsqlParser::Table_nameContext>(0);
}

std::vector<chainsqlParser::Column_defContext *> chainsqlParser::Create_table_stmtContext::column_def() {
  return getRuleContexts<chainsqlParser::Column_defContext>();
}
